--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ flexi_logger = "0.29"
 log = "0.4"
 serde = "1.0.217"
 secrecy = { version = "0.8", features = ["serde"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
+tokio-util = { version = "0.7", features = ["rt"] }
+uuid = { version = "1", features = ["v4"] }
