--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ actix-web = "4.11.0"
 actix-web-httpauth = "0.8"
 aws-config = "1.5.16"
 aws-sdk-s3 = "1.74.0"
+dashmap = "5.4.0"
 flexi_logger = "0.29"
 log = "0.4"
 serde = "1.0.217"
