--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,51 +1,51 @@
+# Stable features
 max_width = 100 # Default and stable, just to be explicit
 newline_style = "Unix" # Not default
 tab_spaces = 4 # Default and stable, just to be explicit
 use_field_init_shorthand = true # Not default
 
-# The following are unstable options, commented out for now
-
-#binop_separator = "Front"
-#blank_lines_lower_bound = 0
-#blank_lines_upper_bound = 1
-#brace_style = "PreferSameLine"
-#color = "Auto"
-#combine_control_expr = true
-#comment_width = 100 # Not default
-#condense_wildcard_suffixes = true # Not default
-#control_brace_style = "AlwaysSameLine"
-#empty_item_single_line = true
-#enum_discrim_align_threshold = 0
-#error_on_line_overflow = true # Not default
-#error_on_unformatted = true # Not default
-#fn_single_line = false
-#force_multiline_blocks = false
-#format_code_in_doc_comments = false
-#format_generated_files = true
-#format_macro_matchers = false
-#format_macro_bodies = true
-#format_strings = true # Not default
-#group_imports = "StdExternalCrate" # Not default
-#hex_literal_case = "Lower" # Not default
-#show_parse_errors = true
-#imports_indent = "Block"
-#imports_granularity = "Crate" # Not default
-#imports_layout = "HorizontalVertical"
-#indent_style = "Block"
-#inline_attribute_width = 0
-#match_arm_blocks = true
-#normalize_comments = true # Not default
-#normalize_doc_attributes = true # Not default
-#overflow_delimited_expr = false
-#reorder_impl_items = true # Not default
-#skip_children = false
-#space_after_colon = true
-#space_before_colon = false
-#spaces_around_ranges = false
-#struct_field_align_threshold = 0
-#trailing_comma = "Vertical"
-#trailing_semicolon = true
-#type_punctuation_density = "Wide"
-#unstable_features = true
-#where_single_line = false
-#wrap_comments = true # Not default
+# Unstable features
+binop_separator = "Front"
+blank_lines_lower_bound = 0
+blank_lines_upper_bound = 1
+brace_style = "PreferSameLine"
+color = "Auto"
+combine_control_expr = true
+comment_width = 100 # Not default
+condense_wildcard_suffixes = true # Not default
+control_brace_style = "AlwaysSameLine"
+empty_item_single_line = true
+enum_discrim_align_threshold = 0
+error_on_line_overflow = true # Not default
+error_on_unformatted = true # Not default
+fn_single_line = false
+force_multiline_blocks = false
+format_code_in_doc_comments = false
+format_generated_files = true
+format_macro_matchers = false
+format_macro_bodies = true
+format_strings = true # Not default
+group_imports = "StdExternalCrate" # Not default
+hex_literal_case = "Lower" # Not default
+show_parse_errors = true
+imports_indent = "Block"
+imports_granularity = "Crate" # Not default
+imports_layout = "HorizontalVertical"
+indent_style = "Block"
+inline_attribute_width = 0
+match_arm_blocks = true
+normalize_comments = true # Not default
+normalize_doc_attributes = true # Not default
+overflow_delimited_expr = false
+reorder_impl_items = true # Not default
+skip_children = false
+space_after_colon = true
+space_before_colon = false
+spaces_around_ranges = false
+struct_field_align_threshold = 0
+trailing_comma = "Vertical"
+trailing_semicolon = true
+type_punctuation_density = "Wide"
+unstable_features = true
+where_single_line = false
+wrap_comments = true # Not default
