--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 actix-web = "4.11.0"
 actix-web-httpauth = "0.8"
-aws-config = "1.5.16"
-aws-sdk-s3 = "1.74.0"
+aws-sdk-s3 = { version = "1.74.0", features = ["behavior-version-latest"] }
 brotli = "8.0.2"
 dashmap = "5.4.0"
 flexi_logger = "0.29"
