Switch back to S3 base config; Update the input config to ingest multi-key through S3InputConfig.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 anyhow = "1.0.100"
 actix-web = "4.11.0"
 actix-web-httpauth = "0.8"
-aws-sdk-s3 = { version = "1.74.0", features = ["behavior-version-latest"] }
+aws-config = "1.8.8"
+aws-sdk-s3 = "1.108.0"
 brotli = "8.0.2"
 dashmap = "5.4.0"
 flexi_logger = "0.29"
