--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix-web = "4.11.0"
 actix-web-httpauth = "0.8"
 aws-config = "1.8.8"
 aws-sdk-s3 = "1.108.0"
+aws-sdk-sqs = "1.86.0"
 brotli = "8.0.2"
 dashmap = "5.4.0"
 flexi_logger = "0.29"
