--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ hex = "0.4"
 log = "0.4"
 rmp-serde = "1.3.0"
 serde = "1.0.217"
+serde_json = "1.0.138"
 secrecy = { version = "0.8", features = ["serde"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
