--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ flexi_logger = "0.29"
 hex = "0.4"
 log = "0.4"
 rmp-serde = "1.3.0"
-serde = "1.0.217"
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.138"
 secrecy = { version = "0.8", features = ["serde"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
+url = { version = "2.5.7", features = ["serde"] }
 uuid = { version = "1", features = ["v4"] }
 clap = { version = "4.5.48", features = ["derive"] }
